Fix mobile search on iOS.
Fix #117

--- a/sources/stylesheets/components/_blog-article-comments.scss
+++ b/sources/stylesheets/components/_blog-article-comments.scss
@@ -35,6 +35,7 @@
         bottom: 0;
         left: 0;
         overflow: auto;
+        -webkit-overflow-scrolling: touch;
         box-sizing: border-box;
         height: 100vh;
         padding: 20px;
