--- a/sources/stylesheets/components/_navigation-menus.scss
+++ b/sources/stylesheets/components/_navigation-menus.scss
@@ -227,7 +227,7 @@
     bottom: 0;
     display: block;
     overflow: auto;
-    overflow: auto;
+    -webkit-overflow-scrolling: touch;
     box-sizing: border-box;
     width: 250px;
     padding: 30px 20px 50px;
