--- a/sources/stylesheets/components/_site-footer.scss
+++ b/sources/stylesheets/components/_site-footer.scss
@@ -58,6 +58,7 @@
       a {
         display: block;
         overflow: auto;
+        -webkit-overflow-scrolling: touch;
         height: 100%;
         padding: 55px 50px;
         @media screen and (max-width: $mobile-1) {
