--- a/sources/stylesheets/content/_text.scss
+++ b/sources/stylesheets/content/_text.scss
@@ -256,6 +256,7 @@
 
   pre {
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
     padding: 10px;
 
     code {
