--- a/sources/stylesheets/general/_base.scss
+++ b/sources/stylesheets/general/_base.scss
@@ -359,5 +359,6 @@ a {
 
 .table-holder {
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
   max-width: 100%;
 }
